streamingapp/templates/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongo
  template:
    metadata:
      labels:
        component: mongo
    spec:
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: mongo
          image: mongo:latest #need to check the image
          ports:
            - containerPort: 27017
          volumeMounts:
            - name:  mongo-data
              mountPath: /data/db
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
