streamingapp/templates/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-service
spec: 
  type: CLusterIP
  selector:
    component: auth-service
  ports:
    - port: 3002
      targetPort: 3002
