streamingapp/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-service
spec: 
  type: NodePort
  selector:
    component: frontend-service
  ports:
    - port: 3000
      targetPort: 80
